kubernetes/apps/home-automation/espresense/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espresense
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espresense
  template:
    metadata:
      labels:
        app: espresense
        nfsMount: "true"
    spec:
      containers:
        - name: espresense
          image: espresense/espresense-companion
          ports:
            - containerPort: 8267
          volumeMounts:
            - mountPath: /config/espresense
              subPath: espresense
              name: unraid-storage
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-un-nvme-pvc
