kubernetes/apps/home-automation/espresense/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: espresense
  namespace: home-automation
spec:
  selector:
    app: espresense
  type: ClusterIP
  ports:
  - name: webui
    protocol: TCP
    port: 8267
    targetPort: 8267
